# email/model.go
@@ -119,3 +119,47 @@ func (req *SendMarginCallRequest) validate() error {
 	}
 	return nil
 }
+
+type SendLiquidateFundRequest struct {
+	From     string                   `json:"from" example:"icfin999@gmail.com"`
+	To       []string                 `json:"to" example:"yoisak09446@gmail.com"`
+	Subject  string                   `json:"subject" example:"margin call"`
+	Template string                   `json:"template" example:"margin-call.html"`
+	Body     BodyLiquidateFundRequest `json:"body"`
+	Auth     bool                     `json:"auth" example:"true"`
+}
+
+type BodyLiquidateFundRequest struct {
+	Name       string  `json:"name" example:"trust momo"`
+	BTCAmount  float64 `json:"btcAmount" example:"0.5"`
+	ETHAmount  float64 `json:"ethAmount" example:"0.5"`
+	ContractID int     `json:"contractId" example:"1"`
+}
+
+func (req *SendLiquidateFundRequest) validate() error {
+	if utf8.RuneCountInString(req.From) == 0 {
+		return errors.Wrapf(errors.New(fmt.Sprintf("'from' must be REQUIRED field but the input is '%v'", req.From)), response.ValidateFieldError)
+	}
+	if len(req.To) == 0 {
+		return errors.Wrapf(errors.New(fmt.Sprintf("'to' must be REQUIRED field but the input is '%v'", req.To)), response.ValidateFieldError)
+	}
+	if utf8.RuneCountInString(req.Subject) == 0 {
+		return errors.Wrapf(errors.New(fmt.Sprintf("'subject' must be REQUIRED field but the input is '%v'", req.Subject)), response.ValidateFieldError)
+	}
+	if utf8.RuneCountInString(req.Template) == 0 {
+		return errors.Wrapf(errors.New(fmt.Sprintf("'template' must be REQUIRED field but the input is '%v'", req.Template)), response.ValidateFieldError)
+	}
+	if utf8.RuneCountInString(req.Body.Name) == 0 {
+		return errors.Wrapf(errors.New(fmt.Sprintf("'name' must be REQUIRED field but the input is '%v'", req.Body.Name)), response.ValidateFieldError)
+	}
+	if req.Body.BTCAmount == 0 {
+		return errors.Wrapf(errors.New(fmt.Sprintf("'btcAmount' must be REQUIRED field but the input is '%v'", req.Body.BTCAmount)), response.ValidateFieldError)
+	}
+	if req.Body.ETHAmount == 0 {
+		return errors.Wrapf(errors.New(fmt.Sprintf("'ethAmount' must be REQUIRED field but the input is '%v'", req.Body.ETHAmount)), response.ValidateFieldError)
+	}
+	if req.Body.ContractID == 0 {
+		return errors.Wrapf(errors.New(fmt.Sprintf("'contractId' must be REQUIRED field but the input is '%v'", req.Body.ContractID)), response.ValidateFieldError)
+	}
+	return nil
+}
